--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.12.2
   json_annotation: ^3.0.0
   search_app_bar: ^1.0.2+2
+  date_format: ^1.0.8
 
 
   # The following adds the Cupertino Icons font to your application.
