--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
+
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
@@ -27,8 +28,12 @@ dependencies:
   json_annotation: ^3.0.0
   search_app_bar: ^1.0.2+2
   date_format: ^1.0.8
-
-
+  shared_preferences: ^0.5.12+4
+  fluttertoast: ^7.1.5
+  event_bus: ^1.1.1
+  direct_select: ^1.1.0
+  flutter_easyloading: ^2.2.1
+  flutter_spinkit: "^4.1.2"
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -39,6 +44,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^1.0.0
   json_serializable: ^3.2.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
